Email corrigido e reformatação da lista

--- a/server/homepage/templates/homepage/homepage.html
+++ b/server/homepage/templates/homepage/homepage.html
@@ -74,12 +74,12 @@
                 As peças vão da cozinha à mesa, e podem ser levadas ao forno
                 convencional, ao microondas e à lava-louças.
               </p>
-              <p>
-                - Vendas em atacado e varejo.<br>
-                - Desenvolvimento de peças para restaurantes, cafés e docerias.<br>
-                - Presentes corporativos.<br>
-                - Listas de casamento personalizadas.
-              </p>
+              <ol class="ui big relaxed list">
+                <li value="-" class="ui item">Vendas em atacado e varejo.</li>
+                <li value="-" class="ui item">Desenvolvimento de peças para restaurantes, cafés e docerias.</li>
+                <li value="-" class="ui item">Presentes corporativos.</li>
+                <li value="-" class="ui item">Listas de casamento personalizadas.</li>
+              </ol>
             </div>
 
             <div class="ui basic segment secao">
