--- a/server/homepage/templates/homepage/banner.html
+++ b/server/homepage/templates/homepage/banner.html
@@ -19,7 +19,7 @@
 
   <div class="social icons">
     <div class="ui container">
-      <a target="_blank" href="https://wa.me/+{{ contacts.whatsapp_number }}?text=Ol%C3%A1.%20Gostaria%20de%20realizar%20uma%20consulta%20sobre%20seus%20produtos.">
+      <a target="_blank" href="https://wa.me/{{ contacts.whatsapp_number }}">
         <i class="whatsapp circular inverted primary link big icon"></i>
       </a>
       <a target="_blank" href="{{ contacts.instagram }}">
