--- a/server/homepage/templates/homepage/contact_card_snippet.html
+++ b/server/homepage/templates/homepage/contact_card_snippet.html
@@ -11,7 +11,7 @@
             <a href="tel:{{ contacts.telephone_text }}">
               <i class="phone icon"></i>
             </a>
-            <a href="https://wa.me/{{ contacts.whatsapp_number }}?text=">
+            <a href="https://wa.me/{{ contacts.whatsapp_number }}">
               <i class="whatsapp icon"></i>
             </a>
             <span class="content">{{ contacts.telephone_text }}</span>
