--- a/server/homepage/templates/homepage/banner.html
+++ b/server/homepage/templates/homepage/banner.html
@@ -32,5 +32,12 @@
         <i class="phone circular inverted primary link big icon"></i>
       </a>
     </div>
+    <div class="ui basic segment">
+      <div class="catalogo icons">
+        <a class="ui primary button" href="downloads/Catálogo LE DUE CERÂMICAS (nov-20).pdf">
+          Catálogo
+        </a>
+      </div>
+    </div>
   </div>
 </div>
